--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,10 @@
     <img src="<%=require('./images/logo.svg')%>" alt="Логотип проекта масто" class="logo header__logo">
   </header>
   <main class="content">
-    <section class="profile page__section">
-      <div class="profile__image" style="background-image: url('<%=require(`./images/avatar.jpg`)%>')"></div>
+  <section class="profile page__section">
+<div class="profile__image" style="background-image: url('<%=require(`./images/avatar.jpg`)%>')">
+  <button class="profile__edit-avatar" type="button"></button>
+</div>
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
@@ -36,9 +38,11 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form popup__form-profile" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+      <form class="popup__form popup__form-profile" name="edit-profile" novalidate>
+        <input type="text" name="name" class="popup__input popup__input_type_name form__input_type_error" id="form__input-name" placeholder="Имя" minlength="2" maxlength="40" data-error-message="Поле может содержать только латинские и кириллические буквы, знаки дефиса и пробелы." pattern="[a-zA-Zа-яА-ЯЁё\s\-]+" required >
+        <span class="popup__error form__input-name-error"></span>
+        <input type="text" name="description" class="popup__input popup__input_type_description form__input_type_error" id="form__input-description" placeholder="Занятие" minlength="2" maxlength="200" data-error-message="Поле может содержать только латинские и кириллические буквы, знаки дефиса и пробелы." pattern="[a-zA-Zа-яА-ЯЁё\s\-]+" required >
+        <span class="popup__error form__input-description-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -47,9 +51,11 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form popup__form-card" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+      <form class="popup__form popup__form-card" name="new-place" novalidate>
+        <input type="text" name="place-name" class="popup__input popup__input_type_card-name form__input_type_error" id="form__input-text" placeholder="Название" minlength="2" maxlength="30" data-error-message="Поле может содержать только латинские и кириллические буквы, знаки дефиса и пробелы." pattern="[a-zA-Zа-яА-ЯЁё\s\-]+" required>
+        <span class="popup__error form__input-text-error"></span>
+        <input type="url" name="link" class="popup__input popup__input_type_url" id="form__input-link" placeholder="Ссылка на картинку" required>
+        <span class="popup__error form__input-link-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -61,6 +67,22 @@
       <p class="popup__caption"></p>
     </div>
   </div>
+<div class="popup popup_type_delete">
+  <div class="popup__content popup__content-delete">
+      <button type="button" class="popup__close popup__close-сonfirm"></button>
+       <h3 class="popup__title">Вы уверены?</h3>
+       <button class="popup__button popup__button_delete">Да</button>
+</div>
+</div>
+<div class="popup popup_type-avatar">
+<div class="popup__content popup__content-avatar">
+  <button type="button" class="popup__close"></button>
+    <h3 class="popup__title">Обновить аватар</h3>
+    <form class="popup__form popup__form-avatar" novalidate>
+    <input type="url" name="link" class="popup__input popup__input_type_url" id="form__input-link" placeholder="Ссылка на аватар" required>
+      <span class="popup__error form__input-link-error"></span>
+      <button type="submit" class="button popup__button">Сохранить</button>
+</div>
 </div>
 
 <template id="card-template">
@@ -70,7 +92,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
+      <div class="like__like-count">
       <button type="button" class="card__like-button"></button>
+      <span class="card__likes-count">0</span>
+      </div>
     </div>
   </li>
 </template>
